@@ -4,6 +4,7 @@
 	- fix: noarch header gets initialized differently.
 	- fix: $2 to triggerpostun scripts was wrong
 	- fix: --querybypkg in man page should be --filesbypkg
+	- fix: optflags not implicitly set to canonical arch value.
 
 2.94 -> 2.95
 	- fix: last update transaction set segfault bug in installer.
